--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div style="background-color: Green">
+        <div style="background-color: Pink">
             <h1 style="color:blue"> Welcome Github</h1>
             <h2 style="color:peru">Leo Casillas</h2>
             <p class="hub"> testing github for my Assignment</p>
